Revert "1.加入By Section Enable/Disable的功能"
This reverts commit 8283e1cef4018edb0d8155f390bce471dee242ed.

--- a/BCWinForm/Config/SOUTH_INNOLUX/EQMapToValueEvent.config
+++ b/BCWinForm/Config/SOUTH_INNOLUX/EQMapToValueEvent.config
@@ -1,6 +1,6 @@
 ﻿<EQMapToValueEvent>
 
-  <!--<EQObject id="MCharger" cate="Equipment" MPLCName="Charger">
+  <EQObject id="MCharger" cate="Equipment" MPLCName="Charger">
     <ValueEvent baseName="AGVC_TO_CHARGER_INDEX_AREA" relativeName="AGVC_TO_CHARGER_INDEX_AREA"></ValueEvent>
     <ValueEvent baseName="AGVC_TIME_SYNC_COMMAND" relativeName="AGVC_TIME_SYNC_COMMAND"></ValueEvent>
     <ValueEvent baseName="AGVC_TO_MCHARGER_INDEX_AREA" relativeName="AGVC_TO_MCHARGER_INDEX_AREA"></ValueEvent>
@@ -32,5 +32,5 @@
   <EQObject id="TrafficLight2" cate="Equipment" MPLCName="TrafficLight2">
     <ValueEvent baseName="TRAFFIC_LIGHT_READ" relativeName="Traffic_light_read_signal"></ValueEvent>
     <ValueEvent baseName="TRAFFIC_LIGHT_WRITE" relativeName="Traffic_light_write_signal"></ValueEvent>
-  </EQObject>-->
+  </EQObject>
 </EQMapToValueEvent>
