--- a/BCWinForm/Config/NORTH_INNOLUX/App.config
+++ b/BCWinForm/Config/NORTH_INNOLUX/App.config
@@ -64,9 +64,7 @@
   </startup>
   <connectionStrings>
     <!--name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=OHSC_6F_100_Dev;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-   <!-- <add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db.ohxc.mirle.com.tw;initial catalog=AGVC_North_Innolux;user id=sa;password=p@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-     <add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=496f02ffb24d.sn.mynetname.net\SQLEXPRESS,1433;initial catalog=AGVC_North_Innolux;user id=sa;password=p@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  
+    <add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db.ohxc.mirle.com.tw;initial catalog=AGVC_North_Innolux;user id=sa;password=p@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
