--- a/BCWinForm/Config/NORTH_INNOLUX/EquipmentDefs_simple.config
+++ b/BCWinForm/Config/NORTH_INNOLUX/EquipmentDefs_simple.config
@@ -95,10 +95,10 @@
         <PortStation id="P25" unit_num="5" adr_id ="00000"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
         </EQPT>-->
         <EQPT id="MCharger" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.ChargerValueDefMapAction, ScriptControl">
-          <Unit id="Charger1" unit_num="1" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.NorthInnolux.SubChargerValueDefMapAction, ScriptControl"/>
-          <Unit id="Charger2" unit_num="2" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.NorthInnolux.SubChargerValueDefMapAction, ScriptControl"/>
-          <Unit id="Charger3" unit_num="3" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.NorthInnolux.SubChargerValueDefMapAction, ScriptControl"/>
-          <Unit id="Charger4" unit_num="4" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.NorthInnolux.SubChargerValueDefMapAction, ScriptControl"/>
+          <Unit id="Charger1" unit_num="1" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.SubChargerValueDefMapAction, ScriptControl"/>
+          <Unit id="Charger2" unit_num="2" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.SubChargerValueDefMapAction, ScriptControl"/>
+          <Unit id="Charger3" unit_num="3" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.SubChargerValueDefMapAction, ScriptControl"/>
+          <Unit id="Charger4" unit_num="4" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.SubChargerValueDefMapAction, ScriptControl"/>
         </EQPT>
         <EQPT id="FireDoorInfo1" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.FireDoorInfoDefaultValueDefMapAction, ScriptControl">
           <Unit id="FireDoor1" unit_num="1" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.FireDoorDefaultValueDefMapAction, ScriptControl"/>
