--- a/BCWinForm/Config/SOUTH_INNOLUX/App.config
+++ b/BCWinForm/Config/SOUTH_INNOLUX/App.config
@@ -65,6 +65,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
+    <!--name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=OHSC_6F_100_Dev;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db.ohxc.mirle.com.tw;initial catalog=AGVC_South_Innolux;user id=sa;password=p@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
