Revert "修正回復AGV Reserve Section沒預約到全部也會給全部的問題。"
This reverts commit b2c4750b6360865fbc6d6722dd0835a34e717b19.

--- a/BCWinForm/Config/NORTH_INNOLUX/AppSettings_simple.config
+++ b/BCWinForm/Config/NORTH_INNOLUX/AppSettings_simple.config
@@ -60,6 +60,5 @@
   <!--RePosition至少要退避的距離-->
   <add key="RePositionDistance" value="6000" />
   <!--暫時停車點-->
-  <add key="ParkAdr1" value="16067" />
-  <add key="ParkAdr2" value="16034" />
+  <add key="ParkAdr" value="16067" />
 </appSettings>
