更新至1.2.0.84版 1.更新Alarm列表 2修正ChartPopupForm關閉後無法打開的問題 3北群創AGV Interlock error失敗Retry次數加入限制，目前為三次。 4.北群創AGV Interlock error失敗Retry次數超過限制，如果CST已上車，需發出S64F1給MCS做DestnationChange。 5.如果車子來要車子所在的Sectio，且當前Reverve的Section為第一段，所在的adr為Reserve的第一段和第二段共有的，則示範該Section給該車。

--- a/BCWinForm/Config/NORTH_INNOLUX/AppSettings_simple.config
+++ b/BCWinForm/Config/NORTH_INNOLUX/AppSettings_simple.config
@@ -59,6 +59,8 @@
   <add key="SensorWLength" value="300" />
   <!--RePosition至少要退避的距離-->
   <add key="RePositionDistance" value="6000" />
+  <!--CMD Fail Retry Count，當命令失敗時需重試的次數-->
+  <add key="CMDFailRetryCount" value="3" />
   <!--暫時停車點-->
   <add key="ParkAdr1" value="16067" />
   <add key="ParkAdr2" value="16034" />
