1.修正手動命令下，load complete不會回覆36 2.變更收到 interlock error 132後將帳料清除

--- a/BCWinForm/BCWinForm.csproj
+++ b/BCWinForm/BCWinForm.csproj
@@ -50,6 +50,7 @@
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
     <UseVSHostingProcess>true</UseVSHostingProcess>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
