手動砍命令會留紀錄
DB: HOPERATION
log: OperationLogger

--- a/BCWinForm/Config/NLog_simple.config
+++ b/BCWinForm/Config/NLog_simple.config
@@ -206,6 +206,10 @@
     <target name="Schedule" xsi:type="File" fileName="${logDirectory}/Schedule.csv" layout="${layoutSchedule}"
                archiveFileName="${logDirectory}/Archive/Schedule_{#}.csv" maxArchiveFiles="60" archiveNumbering="Date"
          archiveEvery="Day" keepFileOpen="false"/>
+	  
+    <target name="OperationLogger" xsi:type="File" fileName="${logDirectory}/OperationLogger.log" layout="${layoutDF}"
+			archiveFileName="${logDirectory}/Archive/OperationLogger_{#}.log" maxArchiveFiles="10" archiveNumbering="Date"
+			archiveEvery="Day" keepFileOpen="false"  />
 
   </targets>
   <rules>
@@ -273,7 +277,8 @@
     <logger name="MTTFMTBF_AGVC_Record" levels="Info" writeTo="MTTFMTBF_AGVC_Record" />
     <logger name="MTTFMTBF_AGV_Record" levels="Info" writeTo="MTTFMTBF_AGV_Record" />
 
-
+    <logger name="OperationLogger" levels="Info" writeTo="OperationLogger" />
+  
   </rules>
 </nlog>
 
