更新版本至v1.2.0.52 1.修正當在充電站上，X、Y所相差的距離大於N mm時，就會當作他不在該出電站上，上她去找別座 2.將MAX_ALLOW_DISTANCE_OFFSET_mm與MAX_ALLOW_VH_ACTION_TIME_SECOND參數化

--- a/BCWinForm/Config/AUO_CAAGV100/AppSettings_simple.config
+++ b/BCWinForm/Config/AUO_CAAGV100/AppSettings_simple.config
@@ -59,4 +59,7 @@
   <add key="VehicleWidth" value="4990" />
   <add key="SensorWLength" value="300" />
 
+  <!--<add key="MAX_ALLOW_VH_ACTION_TIME_SECOND" value="1200" />
+  <add key="MAX_ALLOW_DISTANCE_OFFSET_mm" value="50" />-->
+
 </appSettings>
