--- a/BCWinForm/BCWinForm.csproj
+++ b/BCWinForm/BCWinForm.csproj
@@ -171,8 +171,8 @@
       <HintPath>..\ScriptControl\DLL\M2Mqtt.Net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="Mirle.AK0.Hlt.Utils">
-      <HintPath>..\ScriptControl\DLL\Mirle.AK0.Hlt.Utils.dll</HintPath>
+    <Reference Include="Mirle.Hlts.Utils">
+      <HintPath>..\..\..\..\Desktop\Mirle.Hlts.Utils.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.10.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
