--- a/BCWinForm/BCWinForm.csproj
+++ b/BCWinForm/BCWinForm.csproj
@@ -172,7 +172,7 @@
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Mirle.Hlts.Utils">
-      <HintPath>..\..\..\..\Desktop\Mirle.Hlts.Utils.dll</HintPath>
+      <HintPath>..\ScriptControl\DLL\Mirle.Hlts.Utils.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.10.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
