--- a/BCWinForm/App.config
+++ b/BCWinForm/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <!--NORTH_INNOLUX-->
   <configSections>
@@ -51,7 +51,7 @@
   <EQMapToValueEvent configSource="Config\NORTH_INNOLUX\EQMapToValueEvent.config" />
   <ValueEventRelativeDefs configSource="Config\NORTH_INNOLUX\ValueEventRelativeDefs.config" />
 
-  <appSettings configSource="Config\NORTH_INNOLUX\AppSettings_simple.config"/>
+  <appSettings configSource="Config\NORTH_INNOLUX\AppSettings_simple.config" />
   <!--<hibernate-configuration configSource="Config\SQLite.cfg.xml"/>-->
 
   <MPLCConnectionSetting configSource="Config\NORTH_INNOLUX\MPLCConnectionSetting.config" />
@@ -80,7 +80,15 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.6.1.0" newVersion="3.6.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.19.1.0" newVersion="3.19.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
