--- a/ScriptControl/packages.config
+++ b/ScriptControl/packages.config
@@ -8,7 +8,9 @@
   <package id="ExcelDataReader.DataSet" version="3.4.0" targetFramework="net461" />
   <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net472" />
   <package id="FastMember" version="1.3.0" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.6.1" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.19.1" targetFramework="net472" />
+  <package id="Grpc.Core" version="2.42.0" targetFramework="net472" />
+  <package id="Grpc.Core.Api" version="2.42.0" targetFramework="net472" />
   <package id="KingAOP" version="1.0.0" targetFramework="net461" />
   <package id="Nancy" version="1.4.4" targetFramework="net461" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net461" />
@@ -20,7 +22,11 @@
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net461" />
   <package id="STAN.Client" version="0.1.4" targetFramework="net461" />
   <package id="Stateless" version="4.0.1-dev-00256" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Json" version="4.0.2" targetFramework="net461" />
 </packages>
