新增config使dataWorkerServer的Listen Port可經由設定檔修改

--- a/BCWinForm/Config/AUO_4F/AppSettings_simple.config
+++ b/BCWinForm/Config/AUO_4F/AppSettings_simple.config
@@ -47,4 +47,6 @@
   <!-- LicenseKeyVandor : 1:Taiwan、2:China-->
   <add key="LicenseKeyVandor" value="2" />
 
+  <add key="dataWorkerSerberListenPort" value="6060"/>
+
 </appSettings>
