更新版本至1.2.1.71

--- a/BCWinForm/Config/AUO_CAAGV200/AppSettings_simple.config
+++ b/BCWinForm/Config/AUO_CAAGV200/AppSettings_simple.config
@@ -52,12 +52,11 @@
   <!--當AGV的距離上次充飽電的時間超過N分鐘後，該次充電將會直到充飽電後才會變回AutoRemote-->
   <add key="LongestFullyChargedIntervalTime" value="15" />
   <!--實際車子的高、寬以及Secsor的寬度-->
-  <add key="VehicleHeight" value="1880" />
+  <!--<add key="VehicleHeight" value="1880" />-->
   <!--<add key="VehicleWidth" value="3290" />-->
-  <add key="VehicleWidth" value="3290" />
-  <add key="SensorWLength" value="1200" />
-  <!--<add key="SensorWLength" value="1300" />-->
-
-  <!--<add key="MAX_ALLOW_VH_ACTION_TIME_SECOND" value="1200" />
-  <add key="MAX_ALLOW_DISTANCE_OFFSET_mm" value="50" />-->
+  <add key="VehicleHeight" value="1600" />
+  <add key="VehicleWidth" value="3000" />
+  <add key="SensorWLength" value="1600" />
+  <add key="SensorForwardLength" value="1600" />
+  <add key="SensorLeftLength" value="1600" />
 </appSettings>
