更新版本至1.2.0.56 bug fix:重新再確認取消，邊走邊釋放的功能

--- a/BCWinForm/Config/AUO_CAAGV100/EQMapToValueEvent.config
+++ b/BCWinForm/Config/AUO_CAAGV100/EQMapToValueEvent.config
@@ -50,8 +50,8 @@
     <ValueEvent baseName="CHARGER4_TO_AGVC_CURRENT_CONSTANT_REPORT" relativeName="CHARGERX_TO_AGVC_CHARGER_CURRENT_CONSTANT_REPORT"></ValueEvent>
     <ValueEvent baseName="CHARGER4_TO_AGVC_COUPLER_CHANGING_INFO_REPORT" relativeName="CHARGERX_TO_AGVC_COUPLER_CHANGING_INFO_REPORT"></ValueEvent>
     <ValueEvent baseName="CHARGER4_TO_AGVC_PIO_HANDSHAKE_REPORT" relativeName="CHARGERX_TO_AGVC_PIO_HANDSHAKE_REPORT"></ValueEvent>
-  </EQObject>
-  <!--<EQObject id="FireDoorInfo1" cate="Equipment" MPLCName="FireDoor">
+  </EQObject>>
+  <EQObject id="FireDoorInfo1" cate="Equipment" MPLCName="FireDoor">
     <ValueEvent baseName="FIRE_DOOR_READ" relativeName="Fire_door_info_read_offset_0"></ValueEvent>
   </EQObject>
   <EQObject id="FireDoorInfo2" cate="Equipment" MPLCName="FireDoor">
@@ -66,7 +66,7 @@
     <ValueEvent baseName="FIRE_DOOR_WRITE" relativeName="Fire_door_write_offset_1"></ValueEvent>
   </EQObject>
 
-  <EQObject id="EQ1" cate="Equipment" MPLCName="PortStation">
+  <!-- <EQObject id="EQ1" cate="Equipment" MPLCName="PortStation">
     <ValueEvent baseName="PORT_STATION_REPORT" relativeName="EQ1"></ValueEvent>
   </EQObject>
   <EQObject id="CARUB900:01" cate="Port" MPLCName="PortStation">
@@ -78,7 +78,7 @@
   <EQObject id="CARUB900:03" cate="Port" MPLCName="PortStation">
     <ValueEvent baseName="PORT_STATION_REPORT" relativeName="Port_offset_6_7"></ValueEvent>
   </EQObject>
-
+-->
   <EQObject id="EQ4" cate="Equipment" MPLCName="PortStation_2">
     <ValueEvent baseName="PORT_STATION_2_REPORT" relativeName="EQ1"></ValueEvent>
   </EQObject>
@@ -90,7 +90,7 @@
   </EQObject>
   <EQObject id="AAWTO400:03" cate="Port" MPLCName="PortStation_2">
     <ValueEvent baseName="PORT_STATION_2_REPORT" relativeName="Port_offset_6_7"></ValueEvent>
-  </EQObject>-->
+  </EQObject>
 
 
 </EQMapToValueEvent>
