--- a/BCWinForm/Config/AUO_CAAGV100/EquipmentDefs_simple.config
+++ b/BCWinForm/Config/AUO_CAAGV100/EquipmentDefs_simple.config
@@ -68,8 +68,14 @@
           <PortStation id="CABUF100:36" unit_num="38" adr_id ="20033"  load_vh_type ="0" unload_vh_type ="0" />
           <PortStation id="CABUF100:37" unit_num="39" adr_id ="20034"  load_vh_type ="0" unload_vh_type ="0" />
           <PortStation id="CABUF100:38" unit_num="40" adr_id ="20038"  load_vh_type ="0" unload_vh_type ="0" />
+		  
 
         </EQPT>
+		
+		<EQPT id="EQ5" eqptType="3" communicationType="1" >
+		  <PortStation id="CABCV200:02" unit_num="1" adr_id ="48084"  load_vh_type ="0" unload_vh_type ="0" />
+			
+		</EQPT>
 
         <EQPT id="EQ3" eqptType="1" communicationType="1" >
           <PortStation id="AASTK250:AOUT2" unit_num="1" adr_id ="28066"  load_vh_type ="0" unload_vh_type ="0" />
