--- a/BCWinForm/Config/AUO_CAAGV100/AppSettings_simple.config
+++ b/BCWinForm/Config/AUO_CAAGV100/AppSettings_simple.config
@@ -54,12 +54,10 @@
   <!--當AGV的距離上次充飽電的時間超過N分鐘後，該次充電將會直到充飽電後才會變回AutoRemote-->
   <add key="LongestFullyChargedIntervalTime" value="15" />
   <!--實際車子的高、寬以及Secsor的寬度-->
-  <add key="VehicleHeight" value="1880" />
-  <!--<add key="VehicleWidth" value="3290" />-->
-  <add key="VehicleWidth" value="4990" />
-  <add key="SensorWLength" value="300" />
-
-  <!--<add key="MAX_ALLOW_VH_ACTION_TIME_SECOND" value="1200" />
-  <add key="MAX_ALLOW_DISTANCE_OFFSET_mm" value="50" />-->
+  <add key="VehicleHeight" value="2200" />
+  <!--<add key="VehicleHeight" value="2200" />-->
+  <!--<add key="VehicleWidth" value="4850" />-->
+  <add key="VehicleWidth" value="4850" />
+  <add key="SensorWLength" value="600" />
 
 </appSettings>
