加入VehicleStatusInfo的資訊紀錄。(已完成)

--- a/BCWinForm/Config/NLog_simple.config
+++ b/BCWinForm/Config/NLog_simple.config
@@ -47,6 +47,27 @@
       </layout>
     </target>
 
+    <target name="VehicleStatusInfo" xsi:type="File" fileName="${logDirectory}/VehicleStatusInfo.csv"
+            archiveFileName="${logDirectory}/Archive/VehicleStatusInfo/VehicleStatusInfo_{#}.zip" maxArchiveFiles="180" archiveNumbering="Date"
+            archiveEvery="Day" keepFileOpen="false" enableArchiveFileCompression="true">
+      <layout xsi:type="CSVLayout">
+        <column name="Time" layout="${message}" />
+        <column name="VehicleID" layout="" />
+        <column name="IsConnected" layout="" />
+        <column name="controlStatus" layout="" />
+        <column name="vehicleStatus" layout="" />
+        <column name="commandStatus" layout="" />
+        <column name="vehicleState" layout="" />
+        <column name="repairStatus" layout="" />
+        <column name="errorStatus" layout="" />
+        <column name="chargeStatus" layout="" />
+        <column name="IsLongCharging" layout="" />
+        <column name="IsCSTInstall" layout="" />
+        <quoting>Nothing</quoting>
+        <quoteChar>,</quoteChar>
+      </layout>
+    </target>
+
     <target name="RecodeVehicleCSTInterface" xsi:type="File" fileName="${logDirectory}/RecodeVehicleCSTInterface.log" layout="${layout_OnlyMessage}"
       archiveFileName="${logDirectory}/Archive/RecodeVehicleCSTInterface_{#}.log" maxArchiveFiles="10" archiveNumbering="Date"
      archiveEvery="Day" keepFileOpen="false"/>
@@ -272,6 +293,7 @@
 
     <logger name="MTTFMTBF_AGVC_Record" levels="Info" writeTo="MTTFMTBF_AGVC_Record" />
     <logger name="MTTFMTBF_AGV_Record" levels="Info" writeTo="MTTFMTBF_AGV_Record" />
+    <logger name="VehicleStatusInfo" levels="Info" writeTo="VehicleStatusInfo" />
 
 
   </rules>
