在VehicleStatusInfo中加入opreationsTime的欄位，用來總結目前該Vh的狀態，並測試及調整資料錯誤的地方

--- a/BCWinForm/Config/NLog_simple.config
+++ b/BCWinForm/Config/NLog_simple.config
@@ -63,6 +63,7 @@
         <column name="chargeStatus" layout="" />
         <column name="IsLongCharging" layout="" />
         <column name="IsCSTInstall" layout="" />
+        <column name="opreationsTime" layout="" />
         <quoting>Nothing</quoting>
         <quoteChar>,</quoteChar>
       </layout>
