更新版本至1.2.1.73 1.同步現場Nlog-Config 2.加入可以切換在避車十，使用新的找路徑方式或舊的找路徑方式

--- a/BCWinForm/Config/NLog_simple.config
+++ b/BCWinForm/Config/NLog_simple.config
@@ -4,6 +4,7 @@
       internalLogLevel="Warn"
       internalLogFile="C:\LogFiles\internal-nlog.txt">
   <variable name="logDirectory" value="C:\LogFiles\AGVC" />
+  <variable name="logDirectoryDesktop" value="C:\Users\user\Desktop" />
   <variable name="layoutDF" value="[${date:format=yyyy-MM-dd HH\:mm\:ss.fff} ${logger} ${level:uppercase=true}]: ${message} ${onexception:inner=${newline} ${exception:format=ToString}}"/>
   <variable name="layoutLogUtility" value="${message} ${onexception:inner=${newline} ${exception:format=ToString}}"/>
   <variable name="layout_OnlyMessage" value="${message}"/>
@@ -46,7 +47,7 @@
         <quoteChar>,</quoteChar>
       </layout>
     </target>
-
+    
     <target name="VehicleStatusInfo" xsi:type="File" fileName="${logDirectory}/VehicleStatusInfo.csv"
             archiveFileName="${logDirectory}/Archive/VehicleStatusInfo/VehicleStatusInfo_{#}.zip" maxArchiveFiles="180" archiveNumbering="Date"
             archiveEvery="Day" keepFileOpen="false" enableArchiveFileCompression="true">
@@ -68,18 +69,38 @@
         <quoteChar>,</quoteChar>
       </layout>
     </target>
-
+    
     <target name="RecodeVehicleCSTInterface" xsi:type="File" fileName="${logDirectory}/RecodeVehicleCSTInterface.log" layout="${layout_OnlyMessage}"
-      archiveFileName="${logDirectory}/Archive/RecodeVehicleCSTInterface_{#}.log" maxArchiveFiles="10" archiveNumbering="Date"
+     archiveFileName="${logDirectory}/Archive/RecodeVehicleCSTInterface_{#}.log" maxArchiveFiles="10" archiveNumbering="Date"
      archiveEvery="Day" keepFileOpen="false"/>
 
     <target name="ChargingReport" xsi:type="File" fileName="${logDirectory}/ChargingReport.log" layout="${layout_OnlyMessage}"
-  archiveFileName="${logDirectory}/Archive/ChargingReport{#}.log" maxArchiveFiles="10" archiveNumbering="Date"
- archiveEvery="Day" keepFileOpen="false"/>
+	archiveFileName="${logDirectory}/Archive/ChargingReport{#}.log" maxArchiveFiles="10" archiveNumbering="Date"
+	archiveEvery="Day" keepFileOpen="false"/>
 
     <target name="SysExcuteQuality" xsi:type="File" fileName="${logDirectory}/SysExcuteQuality.log" layout="${layout_OnlyMessage}"
-      archiveFileName="${logDirectory}/Archive/SysExcuteQuality_{#}.log" maxArchiveFiles="10" archiveNumbering="Date"
-     archiveEvery="Day" keepFileOpen="false"/>
+    archiveFileName="${logDirectory}/Archive/SysExcuteQuality_{#}.log" maxArchiveFiles="10" archiveNumbering="Date"
+    archiveEvery="Day" keepFileOpen="false"/>
+	 
+	<target name="TcpIpTrxfileDesktop" xsi:type="File" fileName="${logDirectoryDesktop}/TcpIpTrx.log" layout="${layoutDF}"
+	archiveFileName="${logDirectoryDesktop}/AGVC_LOG/TcpIpTrx_{#}.zip" maxArchiveFiles="10" archiveNumbering="Date"
+	archiveEvery="Day" keepFileOpen="false" enableArchiveFileCompression="true"/>
+	
+	<target name="SXFYLoggerDesktop" xsi:type="File" fileName="${logDirectoryDesktop}/SXFYLogger.log" layout="${layoutDF}"
+	archiveFileName="${logDirectoryDesktop}/AGVC_LOG/SXFYLogger_{#}.zip" maxArchiveFiles="10" archiveNumbering="Date"
+	archiveEvery="Day" keepFileOpen="false" enableArchiveFileCompression="true"/>
+	
+	<target name="RecodeSeriousErrorDesktop" xsi:type="File" fileName="${logDirectoryDesktop}/RecodeSeriousError.log"
+		archiveFileName="${logDirectoryDesktop}/AGVC_LOG/RecodeSeriousError_{#}.zip" maxArchiveFiles="10" archiveNumbering="Date"
+		archiveEvery="Day" keepFileOpen="false" enableArchiveFileCompression="true">
+	<layout xsi:type="JsonLayout">
+		<attribute name="@timestamp" layout="${date:format=yyyy-MM-ddTHH\:mm\:ss.fffzzz}" />
+		<attribute name="NAME_SPACE" layout="${logger}"/>
+		<attribute name="EXECTION" layout="${exception:format=ToString}"/>
+		<attribute name="DETAIL_MSG" layout="${message}"/>
+		<attribute name="Index" layout="RecodeSeriousError"/>
+	</layout>
+    </target>
 
   </targets>
 
@@ -209,7 +230,7 @@
     <target name="SystemProcessLog" xsi:type="File" fileName="${logDirectory}/SystemProcessLog.log" layout="${layout_OnlyMessage}"
         archiveFileName="${logDirectory}/SystemProcessLog_{##}.log"
         archiveAboveSize="10240000"
-        maxArchiveFiles="20"
+        maxArchiveFiles="80"
         archiveNumbering="Sequence"
         keepFileOpen="false"  />
 
@@ -221,7 +242,7 @@
     <target name="ObjectHistoricalInfo" xsi:type="File" fileName="${logDirectory}/ObjectHistoricalInfo/ObjectHistoricalInfo.log" layout="${layout_OnlyMessage}"
         archiveFileName="${logDirectory}/ObjectHistoricalInfo/ObjectHistoricalInfo_{##}.log"
         archiveAboveSize="10240000"
-        maxArchiveFiles="5"
+        maxArchiveFiles="15"
         archiveNumbering="Sequence"
         keepFileOpen="false"  />
 
@@ -240,12 +261,12 @@
     <logger name="SXFYConvertLogger" minlevel="Info" writeTo="SXFYConvertLogger" final="true" />
     <logger name="MPLCHandShakeTimeoutLogger" minlevel="Debug" writeTo="MPLCHandShakeTimeoutLogger" final="true" />
     <logger name="SECSTrxLogger" minlevel="Info" writeTo="SECSTrxLogger" final="true" />
-    <logger name="SXFYLogger" minlevel="Debug" writeTo="SXFYLogger" final="true" />
+    <logger name="SXFYLogger" minlevel="Debug" writeTo="SXFYLogger,SXFYLoggerDesktop" final="true" />
     <logger name="SECSMsgLogger" minlevel="Info" writeTo="SECSMsgLogger" final="true" />
     <logger name="WMemoryBuffer" minlevel="Info" writeTo="WMemoryBuffer" final="true" />
     <logger name="BMemoryBuffer" minlevel="Off" writeTo="BMemoryBuffer" final="true" />
     <logger name="TcpIpControl" minlevel="Debug" writeTo="TcpIpControlfile" final="true" />
-    <logger name="TcpIpTrx" minlevel="Debug" writeTo="TcpIpTrxfile" final="true" />
+    <logger name="TcpIpTrx" minlevel="Debug" writeTo="TcpIpTrxfile,TcpIpTrxfileDesktop" final="true" />
     <logger name="TcpIpTrxState" minlevel="Debug" writeTo="TcpIpTrxStatefile" final="true" />
     <logger name="VHState" minlevel="Off" writeTo="VHStatefile" final="true" />
 
@@ -278,7 +299,7 @@
     <logger name="RecodeVehicleCSTInterface" minlevel="Info" writeTo="RecodeVehicleCSTInterface" />
     <logger name="ChargingReport" minlevel="Info" writeTo="ChargingReport" />
     <logger name="SysExcuteQuality" minlevel="Info" writeTo="SysExcuteQuality" />
-    <logger name="*" level="Error" writeTo="RecodeSeriousError"/>
+    <logger name="*" level="Error" writeTo="RecodeSeriousError,RecodeSeriousErrorDesktop"/>
 
     <logger name="RecodeConnectionInfo" minlevel="Info" writeTo="RecodeConnectionInfo" />
     <logger name="AOP_MethodExecuteInfo" minlevel="Off" writeTo="AOP_MethodExecuteInfo" />
