--- a/ScriptControl/App.config
+++ b/ScriptControl/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-M9I703GC;initial catalog=AGVC_CAAGV100_v4;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db.ohxc.mirle.com.tw;initial catalog=AGVC_CAAGV200_v53;user id=sa;password=p@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
