--- a/ScriptControl/ScriptControl.csproj
+++ b/ScriptControl/ScriptControl.csproj
@@ -1039,6 +1039,9 @@
     </Compile>
     <Compile Include="ValueHandler\ProcessDataValueHandler.cs" />
     <Compile Include="ValueHandler\ValueHandlerBase.cs" />
+    <Compile Include="VHCMD_OHTC_MCS.cs">
+      <DependentUpon>OHTCContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="VSECTION_100.cs">
       <DependentUpon>OHTCContext.tt</DependentUpon>
     </Compile>
@@ -1147,6 +1150,7 @@
     <Content Include="DLL\System.Data.SQLite.dll" />
     <Content Include="DLL\System.Data.SQLite.Linq.dll" />
     <Content Include="DLL\System.IO.Abstractions.dll" />
+    <Content Include="SQL File\[2022_05_20]AUO_800 View Create.sql" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
