--- a/ScriptControl/ScriptControl.csproj
+++ b/ScriptControl/ScriptControl.csproj
@@ -642,6 +642,7 @@
     <Compile Include="Data\VO\AlarmConvertInfo.cs" />
     <Compile Include="Data\VO\PartialVo\ACMD_MCS.cs" />
     <Compile Include="Data\VO\PartialVo\ACMD_OHTC.cs" />
+    <Compile Include="Data\VO\PartialVo\VehicleStatusInfo.cs" />
     <Compile Include="Data\VO\TrafficControlInfo.cs" />
     <Compile Include="Data\VO\VehicleMap.cs" />
     <Compile Include="Data\VO\ReserveEnhanceInfo.cs" />
