將參數[MAX_ALLOW_VH_NO_CONNECTION_TIME_SECOND]，提出使其可以於AppSetting中設定

--- a/BCWinForm/Config/AUO_CAAGV200/AppSettings_simple.config
+++ b/BCWinForm/Config/AUO_CAAGV200/AppSettings_simple.config
@@ -59,4 +59,8 @@
   <add key="SensorWLength" value="1600" />
   <add key="SensorForwardLength" value="1600" />
   <add key="SensorLeftLength" value="1600" />
+
+  <add key="MAX_ALLOW_VH_ACTION_TIME_SECOND" value="1200" />
+  <add key="MAX_ALLOW_VH_NO_CONNECTION_TIME_SECOND" value="30" />
+
 </appSettings>
