更新版本至1.2.0.61 1.將[MAX_ALLOW_VH_NO_CONNECTION_TIME_SECOND]拉出至Appsetting設定 2.將Debug頁面中的Cycle Run功能隱藏

--- a/BCWinForm/Config/AUO_CAAGV100/AppSettings_simple.config
+++ b/BCWinForm/Config/AUO_CAAGV100/AppSettings_simple.config
@@ -60,4 +60,9 @@
   <add key="VehicleWidth" value="4850" />
   <add key="SensorWLength" value="600" />
 
+  <add key="MAX_ALLOW_VH_ACTION_TIME_SECOND" value="1200" />
+  <add key="MAX_ALLOW_VH_NO_CONNECTION_TIME_SECOND" value="30" />
+
+
+
 </appSettings>
