更新交管模組

--- a/BCWinForm/Config/NLog_simple.config
+++ b/BCWinForm/Config/NLog_simple.config
@@ -211,6 +211,12 @@
 			archiveFileName="${logDirectory}/Archive/OperationLogger_{#}.log" maxArchiveFiles="10" archiveNumbering="Date"
 			archiveEvery="Day" keepFileOpen="false"  />
 
+    <target name="ReserveSectionInfo" xsi:type="File" fileName="${logDirectory}/ReserveSectionInfo.log" layout="${layout_OnlyMessage}"
+			archiveFileName="${logDirectory}/Archive/ReserveSectionInfo_{##}.log"
+			archiveEvery="Day"
+			maxArchiveFiles="10"
+			archiveNumbering="Date"
+			keepFileOpen="false" />
   </targets>
   <rules>
     <logger name="MPCTipMessageLog" minlevel="Info" writeTo="MPCTipMessageLog" final="true" />
@@ -278,7 +284,8 @@
     <logger name="MTTFMTBF_AGV_Record" levels="Info" writeTo="MTTFMTBF_AGV_Record" />
 
     <logger name="OperationLogger" levels="Info" writeTo="OperationLogger" />
-  
+
+    <logger name="ReserveSectionInfo" level="Info" writeTo="ReserveSectionInfo"/>  
   </rules>
 </nlog>
 
