--- a/BCWinForm/App.config
+++ b/BCWinForm/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <!--AUO_CAAGV100-->
   <configSections>
@@ -48,7 +48,7 @@
   <EQMapToValueEvent configSource="Config\AUO_CAAGV100\EQMapToValueEvent.config" />
   <ValueEventRelativeDefs configSource="Config\AUO_CAAGV100\ValueEventRelativeDefs.config" />
 
-  <appSettings configSource="Config\AUO_CAAGV100\AppSettings_simple.config"/>
+  <appSettings configSource="Config\AUO_CAAGV100\AppSettings_simple.config" />
   <!--<hibernate-configuration configSource="Config\SQLite.cfg.xml"/>-->
 
   <MPLCConnectionSetting configSource="Config\AUO_CAAGV100\MPLCConnectionSetting.config" />
@@ -78,6 +78,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.19.1.0" newVersion="3.19.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.3.0" newVersion="4.1.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
