--- a/ScriptControl/packages.config
+++ b/ScriptControl/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AspectInjector" version="2.7.3" targetFramework="net472" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
