加入AspectInjector的運用，用來記錄各Function的執行時間

--- a/BCWinForm/Config/NLog_simple.config
+++ b/BCWinForm/Config/NLog_simple.config
@@ -214,7 +214,7 @@
         keepFileOpen="false"  />
 
 
-    <target name="AOP_MethodExecuteInfo" xsi:type="File" fileName="${logDirectory}/AOP_MethodExecuteInfo.log" layout="${layout_OnlyMessage}"
+    <target name="AOP_MethodExecuteInfo" xsi:type="File" fileName="${logDirectory}/AOP_MethodExecuteInfo.log" layout="${layoutDF}"
       archiveFileName="${logDirectory}/Archive/AOP_MethodExecuteInfo_{#}.log" maxArchiveFiles="10" archiveNumbering="Date"
      archiveEvery="Day" keepFileOpen="false"/>
 
@@ -281,7 +281,7 @@
     <logger name="*" level="Error" writeTo="RecodeSeriousError"/>
 
     <logger name="RecodeConnectionInfo" minlevel="Info" writeTo="RecodeConnectionInfo" />
-    <logger name="AOP_MethodExecuteInfo" minlevel="Off" writeTo="AOP_MethodExecuteInfo" />
+    <logger name="AOP_MethodExecuteInfo" minlevel="Debug" writeTo="AOP_MethodExecuteInfo" />
 
     <logger name="*" level="Warn" writeTo="RecodeWarn"/>
 
