修改AOP紀錄的格式

--- a/BCWinForm/Config/NLog_simple.config
+++ b/BCWinForm/Config/NLog_simple.config
@@ -214,10 +214,21 @@
         keepFileOpen="false"  />
 
 
-    <target name="AOP_MethodExecuteInfo" xsi:type="File" fileName="${logDirectory}/AOP_MethodExecuteInfo.log" layout="${layoutDF}"
+    <target name="AOP_MethodExecuteInfo" xsi:type="File" fileName="${logDirectory}/AOP_MethodExecuteInfo.log" 
       archiveFileName="${logDirectory}/Archive/AOP_MethodExecuteInfo_{#}.log" maxArchiveFiles="10" archiveNumbering="Date"
-     archiveEvery="Day" keepFileOpen="false"/>
-
+     archiveEvery="Day" keepFileOpen="false">
+      <layout xsi:type="CSVLayout">
+        <column name="Time" layout="${message}" />
+        <column name="Action" layout="" />
+        <column name="FullName" layout="" />
+        <column name="MethodName" layout="" />
+        <column name="ThreadID" layout="" />
+        <column name="ProcessTime" layout="" />
+        <quoting>Nothing</quoting>
+        <quoteChar>,</quoteChar>
+      </layout>
+    </target>
+    
     <target name="ObjectHistoricalInfo" xsi:type="File" fileName="${logDirectory}/ObjectHistoricalInfo/ObjectHistoricalInfo.log" layout="${layout_OnlyMessage}"
         archiveFileName="${logDirectory}/ObjectHistoricalInfo/ObjectHistoricalInfo_{##}.log"
         archiveAboveSize="10240000"
