Revert "Merge branch 'north_innolux_136initial' into north_innolux"
This reverts commit 2b78b11ab74990b56b8e3e4e8ec03d56cd7395dc, reversing
changes made to ea56f60e2cf3c485c8b9818bb0d65571ae0a706b.

--- a/ScriptControl/ScriptControl.csproj
+++ b/ScriptControl/ScriptControl.csproj
@@ -697,6 +697,7 @@
     <Compile Include="Data\TimerAction\ZabbixDataCollectionTimerAction.cs" />
     <Compile Include="Data\ValueDefMapAction\SouthInnolux\ColorLightValueDefMapAction.cs" />
     <Compile Include="Data\ValueDefMapAction\SouthInnolux\TrafficLightValueDefMapAction.cs" />
+    <Compile Include="Data\ValueDefMapAction\UMTCMCSDefaultMapAction.cs" />
     <Compile Include="Data\ValueDefMapAction\NorthInnolux\SubChargerValueDefMapAction.cs" />
     <Compile Include="Data\ValueDefMapAction\SouthInnoluxMCSDefaultMapAction.cs" />
     <Compile Include="Data\ValueDefMapAction\NorthInnoluxMCSDefaultMapAction.cs" />
