更新版本至v1.2.0.62，修改TCPIPContol.dll版本至1.0.0.17，解決可能造成記憶體溢位的問題

--- a/BCWinForm/Config/NLog_simple.config
+++ b/BCWinForm/Config/NLog_simple.config
@@ -239,6 +239,13 @@
     <target name="Schedule" xsi:type="File" fileName="${logDirectory}/Schedule.csv" layout="${layoutSchedule}"
                archiveFileName="${logDirectory}/Archive/Schedule_{#}.csv" maxArchiveFiles="60" archiveNumbering="Date"
          archiveEvery="Day" keepFileOpen="false"/>
+    
+    <target name="CowboySockets" xsi:type="File" fileName="${logDirectory}/CowboySockets.log" layout="${layoutDF}"
+        archiveFileName="${logDirectory}/Archive/CowboySockets_{#}.log"
+        archiveAboveSize="1024000"
+        maxArchiveFiles="100"
+        archiveNumbering="Sequence"
+        keepFileOpen="false"/>
 
   </targets>
   <rules>
@@ -307,6 +314,7 @@
     <logger name="MTTFMTBF_AGV_Record" levels="Info" writeTo="MTTFMTBF_AGV_Record" />
 
     <logger name="VehicleStatusInfo" levels="Info" writeTo="VehicleStatusInfo" />
+    <logger name="Cowboy.Sockets*" minlevel="Debug" writeTo="CowboySockets" final="true" />
 
   </rules>
 </nlog>
