--- a/BCWinForm/packages.config
+++ b/BCWinForm/packages.config
@@ -7,6 +7,8 @@
   <package id="FastMember" version="1.3.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.19.1" targetFramework="net472" />
   <package id="KingAOP" version="1.0.0" targetFramework="net461" />
+  <package id="Logrila.Logging" version="1.0.2.0" targetFramework="net472" />
+  <package id="Logrila.Logging.NLogIntegration" version="1.0.3.0" targetFramework="net472" />
   <package id="NATS.Client" version="0.8.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NLog" version="4.4.12" targetFramework="net461" />
