實作AGVC與他家的AGVC進行道路管制的功能_2

--- a/BCWinForm/Config/AUO_CAAGVC00/EQMapToValueEvent.config
+++ b/BCWinForm/Config/AUO_CAAGVC00/EQMapToValueEvent.config
@@ -79,6 +79,13 @@
   <EQObject id="CARUBB00:02" cate="Port" MPLCName="PortStation_3">
     <ValueEvent baseName="PORT_STATION_REPORT" relativeName="Port_offset_4_5"></ValueEvent>
   </EQObject>
+  
+  <EQObject id="TrafficSingal" cate="Equipment" MPLCName="FireDoor">
+    <ValueEvent baseName="TRAFFIC_SINGNAL_READ" relativeName="TRAFFIC_SINGNAL_AUO_AGVC_ACK"></ValueEvent>
+    <ValueEvent baseName="TRAFFIC_SINGNAL_WRITE" relativeName="TRAFFIC_SINGNAL_MIRLE_AGVC_ASK"></ValueEvent>
+  </EQObject>
+
+
 
   <!--<EQObject id="FireDoor1" cate="Equipment" MPLCName="FireDoor">
     <ValueEvent baseName="FIRE_DOOR_READ" relativeName="Fire_door_read_offset_0"></ValueEvent>
