--- a/BCWinForm/Config/AUO_CAAGVC00/ValueEventRelativeDefs.config
+++ b/BCWinForm/Config/AUO_CAAGVC00/ValueEventRelativeDefs.config
@@ -316,13 +316,22 @@
   <ValueEventRelative name="Fire_door_read_offset_5">
     <Relative valueDefName="FIRE_DOOR_OPEN" offset="0" length="1" startBit="5" endBit="5" MPLCName="PortStation"/>
   </ValueEventRelative>
-  
+
   <ValueEventRelative name="Fire_door_write_offset_0">
     <Relative valueDefName="FIRE_DOOR_CROSS_SIGNAL" offset="0" length="1" startBit="0" endBit="0" MPLCName="FireDoor"/>
   </ValueEventRelative>
   <ValueEventRelative name="Fire_door_write_offset_1">
     <Relative valueDefName="FIRE_DOOR_CROSS_SIGNAL" offset="0" length="1" startBit="1" endBit="1" MPLCName="FireDoor"/>
   </ValueEventRelative>
+
+  <!--==========================TrafficSingnal============================-->
+  <ValueEventRelative name="TRAFFIC_SINGNAL_AUO_AGVC_ACK">
+    <Relative valueDefName="TRAFFIC_SINGNAL_AUO_AGVC_ACK_PASS" offset="0" length="1" startBit="1" endBit="1" MPLCName="FireDoor"/>
+  </ValueEventRelative>
+  <ValueEventRelative name="TRAFFIC_SINGNAL_MIRLE_AGVC_ASK">
+    <Relative valueDefName="TRAFFIC_SINGNAL_MIRLE_AGVC_ASK_PASS" offset="0" length="1" startBit="0" endBit="0" MPLCName="FireDoor"/>
+  </ValueEventRelative>
+
 
 
 </ValueEventRelativeDefs>
