feat: 針對雙系統交管功能進行實作並完成測試

--- a/BCWinForm/Config/AUO_CAAGVC00/ValueDefs_simple.config
+++ b/BCWinForm/Config/AUO_CAAGVC00/ValueDefs_simple.config
@@ -523,9 +523,9 @@
             rangeType="0" targetType="Boolean" actionType="W" />
 
   <!--==========================TrafficSingnal============================-->
-  <ValueDef name="TRAFFIC_SINGNAL_MIRLE_AGVC_ASK_PASS" scenarioName="TrafficControl" desc="Mirle AGVC Ask Pass Traffic Section" rangeType="0" targetType="Boolean" actionType="R"/>
+  <ValueDef name="TRAFFIC_SINGNAL_MIRLE_AGVC_ASK_PASS" scenarioName="TrafficControl" desc="Mirle AGVC Ask Pass Traffic Section" rangeType="0" targetType="Boolean" actionType="W"/>
   <ValueDef name="TRAFFIC_SINGNAL_AUO_AGVC_ACK_PASS" scenarioName="TrafficControl" desc="AUO AGVC Ack Pass Traffic Section"
-            rangeType="0" targetType="Boolean" actionType="W" />
+            rangeType="0" targetType="Boolean" actionType="R" />
 
 </ValueDefs>
 
