--- a/BCWinForm/Config/AUO_CAAGVC00/MPLCConnectionSetting.config
+++ b/BCWinForm/Config/AUO_CAAGVC00/MPLCConnectionSetting.config
@@ -3,21 +3,22 @@
 <MPLCConnectionSetting>
 
 
-  <Connection Name="Charger" Type="1" LogicalStationNumber="1" ReadIntervalMilliSec="500" MaxMPLCPoolSize="3" MaxMPLCWaitTime="4" MaxMPLCRetryCount="3"
+  <!--<Connection Name="Charger" Type="1" LogicalStationNumber="1" ReadIntervalMilliSec="500" MaxMPLCPoolSize="3" MaxMPLCWaitTime="4" MaxMPLCRetryCount="3"
                AliveMPLCDeviceBlock="W41">
     <Device Type="W" BufferLength="100000" IdRadix="16" BlockBitCount="16" DeviceBitCount="16">
       <ReadRange BeginBlock="00000" EndBlock="00200"></ReadRange>
     </Device>
-  </Connection>
+  </Connection>-->
 
 
-  <!-- <Connection Name="FireDoor" Type="3" IP="192.168.39.241" Port="502" ReadIntervalMilliSec="1000" MaxMPLCPoolSize="3" MaxMPLCWaitTime="4" MaxMPLCRetryCount="3"
+   <Connection Name="FireDoor" Type="3" IP="192.168.39.241" Port="502" ReadIntervalMilliSec="1000" MaxMPLCPoolSize="3" MaxMPLCWaitTime="4" MaxMPLCRetryCount="3"
                 AliveMPLCDeviceBlock="W41">
     <Device Type="0" BufferLength="200" IdRadix="10" BlockBitCount="16" DeviceBitCount="16">
       <ReadRange BeginBlock="0000" EndBlock="00012"></ReadRange>
     </Device>
-  </Connection>-->
-  <Connection Name="PortStation" Type="3" IP="172.168.9.164" Port="502" ReadIntervalMilliSec="1000" MaxMPLCPoolSize="3" MaxMPLCWaitTime="4" MaxMPLCRetryCount="3"
+  </Connection>
+	
+  <!--<Connection Name="PortStation" Type="3" IP="172.168.9.164" Port="502" ReadIntervalMilliSec="1000" MaxMPLCPoolSize="3" MaxMPLCWaitTime="4" MaxMPLCRetryCount="3"
               AliveMPLCDeviceBlock="W41">
     <Device Type="0" BufferLength="200" IdRadix="10" BlockBitCount="16" DeviceBitCount="16">
       <ReadRange BeginBlock="0000" EndBlock="00012"></ReadRange>
@@ -36,6 +37,6 @@
     <Device Type="0" BufferLength="200" IdRadix="10" BlockBitCount="16" DeviceBitCount="16">
       <ReadRange BeginBlock="0000" EndBlock="00012"></ReadRange>
     </Device>
-  </Connection>
+  </Connection>-->
 
 </MPLCConnectionSetting>
