--- a/BCWinForm/Config/AUO_CAAGVC00/EQMapToValueEvent.config
+++ b/BCWinForm/Config/AUO_CAAGVC00/EQMapToValueEvent.config
@@ -1,5 +1,5 @@
 ﻿<EQMapToValueEvent>
-	<!--<EQObject id="MCharger" cate="Equipment" MPLCName="Charger">
+ <EQObject id="MCharger" cate="Equipment" MPLCName="Charger">
     <ValueEvent baseName="AGVC_TO_CHARGER_INDEX_AREA" relativeName="AGVC_TO_CHARGER_INDEX_AREA"></ValueEvent>
     <ValueEvent baseName="AGVC_TIME_SYNC_COMMAND" relativeName="AGVC_TIME_SYNC_COMMAND"></ValueEvent>
     <ValueEvent baseName="AGVC_TO_MCHARGER_INDEX_AREA" relativeName="AGVC_TO_MCHARGER_INDEX_AREA"></ValueEvent>
@@ -78,16 +78,14 @@
   </EQObject>
   <EQObject id="CARUBB00:02" cate="Port" MPLCName="PortStation_3">
     <ValueEvent baseName="PORT_STATION_REPORT" relativeName="Port_offset_4_5"></ValueEvent>
-  </EQObject>-->
+  </EQObject>
 
 	<EQObject id="TrafficSingal" cate="Equipment" MPLCName="FireDoor">
 		<ValueEvent baseName="TRAFFIC_SINGNAL_READ" relativeName="TRAFFIC_SINGNAL_AUO_AGVC_ACK"></ValueEvent>
 		<ValueEvent baseName="TRAFFIC_SINGNAL_WRITE" relativeName="TRAFFIC_SINGNAL_MIRLE_AGVC_ASK"></ValueEvent>
 	</EQObject>
 
-
-
-	<!--<EQObject id="FireDoor1" cate="Equipment" MPLCName="FireDoor">
+  <!--<EQObject id="FireDoor1" cate="Equipment" MPLCName="FireDoor">
     <ValueEvent baseName="FIRE_DOOR_READ" relativeName="Fire_door_read_offset_0"></ValueEvent>
     <ValueEvent baseName="FIRE_DOOR_WRITE" relativeName="Fire_door_write_offset_0"></ValueEvent>
   </EQObject>
@@ -96,5 +94,5 @@
     <ValueEvent baseName="FIRE_DOOR_READ" relativeName="Fire_door_read_offset_3"></ValueEvent>
     <ValueEvent baseName="FIRE_DOOR_WRITE" relativeName="Fire_door_write_offset_1"></ValueEvent>
   </EQObject>-->
-
+  
 </EQMapToValueEvent>
